--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,19 @@
 {
   "compilerOptions": {
     "declaration": true,
+    "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
-    "noImplicitAny": true,
     "outDir": "./dist",
+    "noImplicitAny": true,
     "preserveConstEnums": true,
     "removeComments": true,
+    "stripInternal": true,
     "typeRoots": [
       "./node_modules/@types"
+    ],
+    "lib": [
+      "es2015", "dom"
     ]
   },
   "include": [
