--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vertx3-eventbus-rx-client",
   "version": "0.3.0",
-  "description": "vertx3-eventbus-rx-client",
+  "description": "RxJS powered Event Bus client for Vert.x 3",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "clean": "rimraf dist",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "build": "npm run clean && npm run lint && echo Using TypeScript && tsc --version && tsc --pretty",
+    "docs": "npm run build && typedoc --name \"RxJS powered Event Bus client for Vert.x 3\" --theme minimal --mode file --out ./docs ./dist",
     "test": "npm run build && mocha --compilers ts:ts-node/register --recursive \"spec/**/*.spec.ts\"",
     "e2e": "npm run build && mocha --compilers ts:ts-node/register --recursive \"spec/**/*.e2e.ts\"",
     "coverage": "nyc --include=\"src/**/*.ts\" --reporter=text --reporter=lcov mocha --compilers ts:ts-node/register --recursive \"spec/**/*.spec.ts\"",
@@ -35,8 +36,7 @@
     "watch:test": "npm run test -- --watch",
     "watch:e2e": "npm run e2e -- --watch"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "peerDependencies": {
     "rxjs": "^5.0.0",
     "vertx3-eventbus-client": "^3.4.0"
@@ -48,17 +48,18 @@
     "@types/sinon": "^2.2.0",
     "@types/sinon-chai": "^2.7.27",
     "chai": "^3.0.0",
+    "coveralls": "^2.0.0",
     "mocha": "^3.0.0",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.9.0",
     "nyc": "^10.0.0",
     "rimraf": "^2.0.0",
+    "sinon": "^2.1.0",
+    "sinon-chai": "^2.9.0",
     "ts-node": "^3.0.0",
     "tslint": "^5.0.0",
     "typescript": "^2.0.0",
-    "coveralls": "^2.0.0",
     "rxjs": "^5.0.0",
-    "vertx3-eventbus-client": "^3.4.0"
+    "vertx3-eventbus-client": "^3.4.0",
+    "typedoc": "^0.7.0"
   },
   "engines": {
     "node": ">=4.0.0"
