--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "dependencies": {},
   "peerDependencies": {
     "rxjs": "^5.0.0",
-    "vertx3-eventbus-client": "^3.4.0"
+    "vertx3-eventbus-client": ">=3.4.0 <3.5.0"
   },
   "devDependencies": {
     "@types/chai": "^3.0.0",
@@ -55,14 +55,14 @@
     "mocha": "^3.0.0",
     "nyc": "^10.0.0",
     "rimraf": "^2.0.0",
+    "rxjs": "^5.0.0",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
     "ts-node": "^3.0.0",
     "tslint": "^5.0.0",
+    "typedoc": "^0.7.0",
     "typescript": "^2.0.0",
-    "rxjs": "^5.0.0",
-    "vertx3-eventbus-client": "^3.4.0",
-    "typedoc": "^0.7.0"
+    "vertx3-eventbus-client": "~3.4.2"
   },
   "engines": {
     "node": ">=4.0.0"
