--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "watch:test": "npm run test -- --watch",
     "watch:e2e": "npm run e2e -- --watch"
   },
-  "dependencies": {},
   "peerDependencies": {
-    "rxjs": "^5.0.0",
-    "vertx3-eventbus-client": ">=3.4.0 <3.5.0"
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
+    "vertx3-eventbus-client": ">=3.4.0 <3.6.0"
   },
   "devDependencies": {
     "@types/chai": "^3.0.0",
@@ -55,14 +55,15 @@
     "mocha": "^3.0.0",
     "nyc": "^10.0.0",
     "rimraf": "^2.0.0",
-    "rxjs": "^5.0.0",
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
     "ts-node": "^3.0.0",
     "tslint": "^5.0.0",
     "typedoc": "^0.7.0",
     "typescript": "^2.0.0",
-    "vertx3-eventbus-client": "~3.4.2"
+    "vertx3-eventbus-client": "~3.5.1"
   },
   "engines": {
     "node": ">=4.0.0"
